# CoreNN

./: .cproject  .cquery  .gitignore  .project  CMakeLists.txt
Include/: Blob.h  Board.h  Clock.h  CudaTests.h  ErrorFunction.h  Initializer.h  NNInclude.h  Neuron.h  Optimizer.h  SubTensor.h  Tensor.h  TensorShape.h  Tests.h  Typedefs.h  UtilFuncs.h  cudaTests.h
Include/ErrorFunctions/: CategoricalCrossEntropyError.h  CrossEntropyError.h  L1Error.h  MeanSquaredError.h  UnitError.h
Include/Initializers/: RangeInitializer.h
Include/Neurons/: AddNeuron.h  Col2ImNeuron.h  ConvNeuron.h  DiagNeuron.h  FileNeuron.h  FullyConnectedNeuron.h  Im2ColNeuron.h  KingNeuron.h  KnightNeuron.h  LeakyReLUNeuron.h  MultiplyNeuron.h  RankNeuron.h  ReshapeNeuron.h  SigmoidNeuron.h  SoftmaxNeuron.h  StepNeuron.h  TanhNeuron.h
Include/Optimizers/: AdamOptimizer.h  SharedOptimizer.h  StandardOptimizer.h
Include/Tests/: Tests.h
Source/: Blob.cpp  Board.cpp  Clock.cpp  CudaTests.cu  ErrorFunction.cpp  Initializer.cpp  Main.cpp  Neuron.cpp  Optimizer.cpp  SubTensor.cpp  Tensor.cpp  Tensor.cu  TensorShape.cpp  Tests.cpp  UtilFuncs.cpp  cudaTests.cu
Source/ErrorFunctions/: CategoricalCrossEntropyError.cpp  CategoricalCrossEntropyError.cu  CrossEntropyError.cpp  L1Error.cpp  MeanSquaredError.cpp  MeanSquaredError.cu  UnitError.cpp
Source/Initializers/: RangeInitializer.cpp
Source/Kernels/: matrix_funcs.cl
Source/Neurons/: AddNeuron.cpp  Col2ImNeuron.cpp  ConvNeuron.cpp  ConvNeuron.cu  DiagNeuron.cpp  FileNeuron.cpp  FullyConnectedNeuron.cpp  FullyConnectedNeuron.cu  Im2ColNeuron.cpp  Im2ColNeuron.cu  KingNeuron.cpp  KnightNeuron.cpp  LeakyReLUNeuron.cpp  LeakyReLUNeuron.cu  MultiplyNeuron.cpp  RankNeuron.cpp  ReshapeNeuron.cpp  SigmoidNeuron.cpp  SigmoidNeuron.cu  SoftmaxNeuron.cpp  SoftmaxNeuron.cu  StepNeuron.cpp  TanhNeuron.cpp  TanhNeuron.cu
Source/Optimizers/: AdamOptimizer.cpp  AdamOptimizer.cu  SharedOptimizer.cpp  StandardOptimizer.cpp  StandardOptimizer.cu
Source/Tests/: CudaTests.cu  Main.cpp  Tests.cpp
